[tool.poetry]
name = "risk-matrix-scheduler"
version = "0.1.0"
description = ""
authors = ["Cizz22 <cisatraa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
logging = "^0.4.9.6"
schedule = "^1.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
